# epsolar-tracer

./: info.py  plot.py  pyproject.toml  watch.sh
pyepsolartracer/: client.py
test/: test_battery_parsing.py  test_charger_parsing.py
