[build-system]
requires = ["pip>=23.1.1", "setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
version = "1.2.3"
name = "pyepsolartracer"
authors = [
  { name = "kasbert" },
  { name = "ignne" }
]
description = ""
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Natural Language :: English",
  "License :: OSI Approved :: Apache",
  "Intended Audience :: Developers",
  "Typing :: Typed",
]
urls = { Homepage = "https://github.com/IGNNE/epsolar-tracer" }
dependencies = [
  "pyserial>=3.5.0",
  "pymodbus>=3.2.0"
]

[tool.setuptools.packages.find]
include = ["pyepsolartracer"]
